--- a/src/components/pages/MainPage/MainPage.css
+++ b/src/components/pages/MainPage/MainPage.css
@@ -5,7 +5,6 @@
   justify-content: space-between;
   flex-grow: 1;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 @media (max-width: 767px) {
